--- a/package.json
+++ b/package.json
@@ -2,5 +2,13 @@
   "name": "i-promise",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "nodemon src/index.ts"
+  },
+  "dependencies": {
+    "nodemon": "3.1.4",
+    "ts-node": "^10.9.2",
+    "typescript": "5.5.3"
+  }
 }
